Change serialization library and update dependencies